# stroke-detector

./: .gitignore  LICENSE  README.md  paper.bib  paper.md  pyproject.toml  requirements.txt
configs/: stage1.yaml  stage2.yaml  stage3.yaml
examples/: demo_inference.ipynb
results_isles2015/: isles2015_summary.csv
scripts/: evaluate_primary.py  evaluate_synthetic_bvalue.py  generate_synthetic_b.py  localize_stroke.py  make_isles_final_split.py  make_isles_mask_bboxes.py  train_stroke.py
src/stroke_detector/: __init__.py  data.py  inference.py  model.py
tests/: test_inference.py  test_model.py  test_preprocessing.py
