[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stroke-detector"
version = "0.1.0"
description = "Lightweight three-stage deep learning pipeline for acute ischaemic stroke detection from DWI/ADC"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Debina Laishram", email = "debinalaishram@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "nibabel>=4.0.0",
    "scipy>=1.9.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "pyyaml>=6.0",
    "tqdm>=4.64.0",
]

[tool.setuptools.packages.find]
where = ["src"]